farrah/fix: scrolling (#720)
* style: enhance global CSS with custom scrollbars and utilities

#VERCEL_SKIP


* style: refine global CSS variables and utilities

#VERCEL_SKIP


* feat: enhance user session and onboarding verification logic

#VERCEL_SKIP


* feat: enhance orders page with dynamic UI components and state management

#VERCEL_SKIP


* feat: enhance table component with custom ref and display names

#VERCEL_SKIP


* feat: enhance global styles and custom scrollbar utilities

#VERCEL_SKIP


* feat: enhance main app component with session data handling and user verification

#VERCEL_SKIP


---------

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,12 @@ body {
   background: rgb(var(--background-rgb));
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  @media (max-width: 767px) {
+    body {
+      overflow: hidden;
+    }
+  }
 }
 
 @layer utilities {
@@ -39,6 +45,7 @@ body {
   .scrollbar-custom {
     -ms-overflow-style: none;
     scrollbar-width: none;
+    -webkit-overflow-scrolling: touch;
   }
 
   .scrollbar-custom::-webkit-scrollbar {
